--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "microcms-js-sdk": "^2.0.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-jsx": "^5.0.0"
   },
   "devDependencies": {
+    "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.6",
+    "sass": "^1.49.7",
+    "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
   }
 }
