--- a/package.json
+++ b/package.json
@@ -8,22 +8,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.9",
+    "@editorjs/editorjs": "^2.23.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.4.0",
+    "@prisma/client": "^3.9.1",
+    "apollo-server": "^3.6.3",
+    "apollo-server-micro": "^3.6.2",
+    "graphql": "^16.3.0",
+    "micro-cors": "^0.1.1",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "styled-jsx": "^5.0.0"
   },
   "devDependencies": {
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/list": "^1.6.2",
     "@styled-jsx/plugin-sass": "^4.0.2",
+    "@types/editorjs__header": "^2.6.0",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "postcss": "^8.4.6",
+    "prisma": "^3.9.1",
     "sass": "^1.49.7",
     "tailwindcss": "^3.0.18",
     "typescript": "4.5.5"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   }
 }
