--- a/package.json
+++ b/package.json
@@ -10,24 +10,32 @@
   "dependencies": {
     "@apollo/client": "^3.5.9",
     "@editorjs/editorjs": "^2.23.2",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/simple-image": "^1.4.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.7",
+    "@graphql-codegen/typescript-operations": "^2.3.4",
+    "@graphql-codegen/typescript-react-query": "^3.5.7",
     "@mui/material": "^5.4.0",
     "@prisma/client": "^3.9.1",
     "apollo-server": "^3.6.3",
     "apollo-server-micro": "^3.6.2",
+    "draft-js": "^0.11.7",
     "graphql": "^16.3.0",
     "micro-cors": "^0.1.1",
     "microcms-js-sdk": "^2.0.0",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-editor-js": "^2.0.6",
     "styled-jsx": "^5.0.0"
   },
   "devDependencies": {
-    "@editorjs/header": "^2.6.2",
     "@editorjs/list": "^1.6.2",
     "@styled-jsx/plugin-sass": "^4.0.2",
+    "@types/draft-js": "^0.11.9",
     "@types/editorjs__header": "^2.6.0",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "17.0.13",
